# YAMB

./: README.md
yamb/: CMakeLists.txt  Dockerfile  env  run_docker.sh  start.sh
yamb/base/: application.cpp  application.h  base64.cpp  base64.h  bitwise.h  buffer.cpp  buffer.h  collection.cpp  collection.h  configuration.cpp  configuration.h  datetime.cpp  datetime.h  error.h  filesystem.cpp  filesystem.h  handle.h  hex.h  idler.cpp  idler.h  interface.h  ipc.h  libsourcey.h  logger.cpp  logger.h  loop.h  memory.cpp  memory.h  numeric.cpp  once.h  packet.h  packetfactory.h  packetio.h  packetqueue.h  packetsignal.h  packetstream.cpp  packetstream.h  packettransaction.h  pipe.cpp  pipe.h  (+30 more)
yamb/crypto/: cipher.cpp  cipher.h  crypto.cpp  crypto.h  hash.cpp  hash.h  hmac.cpp  hmac.h  rsa.cpp  rsa.h  x509certificate.cpp  x509certificate.h
yamb/dep_Docker/: Dockerfile
yamb/http/: authenticator.cpp  authenticator.h  client.cpp  client.h  connection.cpp  connection.h  cookie.cpp  cookie.h  form.cpp  form.h  http.h  message.cpp  message.h  packetizers.h  parser.cpp  parser.h  request.cpp  request.h  response.cpp  response.h  server.cpp  server.h  url.cpp  url.h  util.cpp  util.h  websocket.cpp  websocket.h
yamb/json/: configuration.cpp  configuration.h  iserializable.h  json.cpp  json.h
yamb/net/: address.cpp  address.h  dns.h  net.h  packetsocket.cpp  packetsocket.h  socket.h  socketadapter.cpp  socketadapter.h  socketemitter.cpp  socketemitter.h  ssladapter.cpp  ssladapter.h  sslcontext.cpp  sslcontext.h  sslmanager.cpp  sslmanager.h  sslsession.cpp  sslsession.h  sslsocket.cpp  sslsocket.h  tcpsocket.cpp  tcpsocket.h  transaction.h  types.h  udpsocket.cpp  udpsocket.h  util.cpp  util.h
yamb/rapidjson/: document.h  rapidjson.h  schema.h
yamb/socketio/: client.cpp  client.h  packet.cpp  packet.h  socketio.h  transaction.cpp  transaction.h
yamb/src/: CircularBuffer.cpp  CircularBuffer.h  Hasher.h  SignalingConn.cpp  SignalingConn.hpp  WebrtcNode.cpp  WebrtcNode.h  config.h  main.cpp  messageBroker.cpp  messageBroker.hpp
yamb/src/CSharp/: SimplifiedAPI.i
yamb/src/SCYExtension/: Destination.cpp  Destination.h  NodeGraph.cpp  NodeGraph.h  (+9 more)
yamb/stun/: attributes.cpp  attributes.h  message.cpp  message.h  stun.h  transaction.cpp  transaction.h
yamb/symple/: address.cpp  address.h  client.cpp  client.h  command.cpp  command.h  event.cpp  event.h  form.cpp  form.h  message.cpp  message.h  peer.cpp  peer.h  presence.cpp  presence.h  roster.cpp  roster.h  symple.h
yamb/turn/: fivetuple.cpp  fivetuple.h  iallocation.cpp  iallocation.h  permission.h  types.h
yamb/util/: base64packetencoder.h  diagnosticmanager.cpp  diagnosticmanager.h  iregistry.h  ratelimiter.h  streammanager.cpp  streammanager.h  timedmanager.h  timeout.cpp  timeout.h  usermanager.h
yamb/uv/: unix.h
yamb/webrtc/: audiopacketmodule.cpp  audiopacketmodule.h  fakeaudiodevicemodule.cpp  fakeaudiodevicemodule.h  multiplexmediacapturer.cpp  multiplexmediacapturer.h  peer.cpp  peer.h  peerfactorycontext.cpp  peerfactorycontext.h  peermanager.cpp  peermanager.h  recordingpeer.cpp  recordingpeer.h  streamrecorder.cpp  streamrecorder.h  util.cpp  util.h  videopacketsource.cpp  videopacketsource.h  webrtc.h  yuvframegenerator.cpp  yuvframegenerator.h  yuvvideocapturer.h
(+52 files in other folders)
